v10/docs/ModelsReportRequestModel.md
# ModelsReportRequestModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int64** |  | [optional] 
**InNavigator** | Pointer to **bool** |  | [optional] 
**Favorite** | Pointer to **bool** |  | [optional] 
**RemoveDuplicates** | Pointer to **bool** |  | [optional] 

## Methods

### NewModelsReportRequestModel

`func NewModelsReportRequestModel() *ModelsReportRequestModel`

NewModelsReportRequestModel instantiates a new ModelsReportRequestModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsReportRequestModelWithDefaults

`func NewModelsReportRequestModelWithDefaults() *ModelsReportRequestModel`

NewModelsReportRequestModelWithDefaults instantiates a new ModelsReportRequestModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsReportRequestModel) GetId() int64`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsReportRequestModel) GetIdOk() (*int64, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsReportRequestModel) SetId(v int64)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsReportRequestModel) HasId() bool`

HasId returns a boolean if a field has been set.

### GetInNavigator

`func (o *ModelsReportRequestModel) GetInNavigator() bool`

GetInNavigator returns the InNavigator field if non-nil, zero value otherwise.

### GetInNavigatorOk

`func (o *ModelsReportRequestModel) GetInNavigatorOk() (*bool, bool)`

GetInNavigatorOk returns a tuple with the InNavigator field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetInNavigator

`func (o *ModelsReportRequestModel) SetInNavigator(v bool)`

SetInNavigator sets InNavigator field to given value.

### HasInNavigator

`func (o *ModelsReportRequestModel) HasInNavigator() bool`

HasInNavigator returns a boolean if a field has been set.

### GetFavorite

`func (o *ModelsReportRequestModel) GetFavorite() bool`

GetFavorite returns the Favorite field if non-nil, zero value otherwise.

### GetFavoriteOk

`func (o *ModelsReportRequestModel) GetFavoriteOk() (*bool, bool)`

GetFavoriteOk returns a tuple with the Favorite field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetFavorite

`func (o *ModelsReportRequestModel) SetFavorite(v bool)`

SetFavorite sets Favorite field to given value.

### HasFavorite

`func (o *ModelsReportRequestModel) HasFavorite() bool`

HasFavorite returns a boolean if a field has been set.

### GetRemoveDuplicates

`func (o *ModelsReportRequestModel) GetRemoveDuplicates() bool`

GetRemoveDuplicates returns the RemoveDuplicates field if non-nil, zero value otherwise.

### GetRemoveDuplicatesOk

`func (o *ModelsReportRequestModel) GetRemoveDuplicatesOk() (*bool, bool)`

GetRemoveDuplicatesOk returns a tuple with the RemoveDuplicates field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRemoveDuplicates

`func (o *ModelsReportRequestModel) SetRemoveDuplicates(v bool)`

SetRemoveDuplicates sets RemoveDuplicates field to given value.

### HasRemoveDuplicates

`func (o *ModelsReportRequestModel) HasRemoveDuplicates() bool`

HasRemoveDuplicates returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


